提交新项目

--- a/demo1/app.json
+++ b/demo1/app.json
@@ -5,7 +5,7 @@
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
     "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "Ashes bibimbap",
+    "navigationBarTitleText": "云开发",
     "backgroundColor": "#eeeeee",
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": false
