--- a/0.0.0-bilibili/app.json
+++ b/0.0.0-bilibili/app.json
@@ -1,7 +1,9 @@
 {
   "pages": [
+    
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/detail/detail"
+    
   ],
   "window": {
     "backgroundTextStyle": "light",
