--- a/demo2/app.json
+++ b/demo2/app.json
@@ -1,14 +1,6 @@
 {
   "pages": [
-    "pages/index/index"
+    "pages/index"
   ],
-  "window": {
-    "navigationBarBackgroundColor": "#ffffff",
-    "navigationBarTextStyle": "black",
-    "navigationBarTitleText": "小程序",
-    "backgroundColor": "#eeeeee",
-    "backgroundTextStyle": "light",
-    "enablePullDownRefresh": false
-  },
   "sitemapLocation": "sitemap.json"
 }
